--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
             android:label="@string/welcome_activity_label"
             android:theme="@style/AppTheme" />
         <activity android:name=".Checkout" />
-        <activity android:name=".Receipt"></activity>
+        <activity android:name=".Receipt" />
+        <activity android:name=".SettingsActivity"></activity>
     </application>
 
 </manifest>
