--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
             android:theme="@style/AppTheme" />
         <activity android:name=".Checkout" />
         <activity android:name=".Receipt" />
-        <activity android:name=".SettingsActivity"></activity>
+        <activity android:name=".SettingsActivity" />
+        <activity android:name=".OrderHistory"></activity>
     </application>
 
 </manifest>
