Basic functionality added to restaurant class. App now has basic functionality from end to end.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         <activity android:name=".Checkout" />
         <activity android:name=".Receipt" />
         <activity android:name=".SettingsActivity" />
-        <activity android:name=".OrderHistory"></activity>
+        <activity android:name=".OrderHistory" />
+        <activity android:name=".ScanActivity"></activity>
     </application>
 
 </manifest>
