--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,10 @@
             android:name=".WelcomeActivity"
             android:label="@string/welcome_activity_label"
             android:theme="@style/AppTheme" />
-        <activity android:name=".Checkout" />
-        <activity android:name=".Receipt" />
+        <activity android:name=".CheckoutActivity" />
+        <activity android:name=".ReceiptActivity" />
         <activity android:name=".SettingsActivity" />
-        <activity android:name=".OrderHistory" />
+        <activity android:name=".OrderHistoryActivity" />
         <activity android:name=".ScanActivity"></activity>
     </application>
 
