--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "24.0.2"
 
     defaultConfig {
-        applicationId "com.example.hannah.orderitapp"
+        applicationId "com.example.emma.orderitapp"
         minSdkVersion 19
         targetSdkVersion 24
         versionCode 1
