Functionality added to QRCodeReaderBusiness. WelcomeActivity setContentView modified

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,10 @@
             android:name=".QRCodeReaderRestaurant"
             android:label="Scan Menu Items">
         </activity>
+        <activity
+            android:name=".QRCodeReaderBusiness"
+            android:label="Scan Menu Items">
+        </activity>
     </application>
 
 </manifest>
